--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.9.2",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
